@@ -24,6 +24,7 @@ proftpd-dfsg (1.3.5e-1) unstable; urgency=medium
   * Removed obsolete code to manage migration from version 1.2.9 in preinst.
   * Fixed target in recent NEWS file issue to make lintian happy.
   * Fixed various spelling errors with new patch.
+  * Now correctly including dpkg buildflags makefile snippets.
 
  -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 10 Jan 2018 09:44:28 +0100
 
